# tlpi

./: .gitignore  CMakeLists.txt  z
docs/: appendex_b.md  ch04.md  ch05.md  ch06.md  ch08.md  ch09.md  ch10.md  ch24.md  ch29.md
lib/: Build_ename.sh  error_functions.c  error_functions.h  get_num.c  get_num.h  read_line.c  read_line.h  tlpi_hdr.h
src/apxB/: list_B_01_getopt.c
src/ch04/: list_04_01_copy.c  list_04_02_open.c  list_04_03_lseek.c  problem_04_01_tee.c  problem_04_02_cp.c  test.c  trial_01_my_open.c  trial_02_read_from_terminal.c  trial_03_write_to_stdout.c  trial_04_write_file_hole.c
src/ch05/: list_05_01_bad_exclusive_open.c  list_05_02_t_readv.c  list_05_03_large_file.c  problem_05_02__O_APPEND.c  problem_05_03_atomic_append.c  problem_05_05_verify_dup.c  problem_05_06.c  trial_05_01_writev.c
src/ch06/: list_06_01_mem_segment.c  list_06_02_necho.c  list_06_04_clearenv.c  list_06_05_longjump.c  problem_06_02_mallacious_longjmp.c  trial_clear_env.c  trial_get_argc_limit.c  trial_get_env_via_main3.c  trial_get_page_size.c  trial_getpid.c  trial_longjmp.c  trial_print_env_list.c  trial_putenv.c  trial_setenv.c  trial_unsetenv.c
src/ch07/: list_07_01_malloc_and_sbrk.c  trial_malloc1.c  trial_realloc.c  trial_sbrk.c
src/ch09/: trial_get_ids.c  trial_set_eids.c
src/ch10/: list_10_04_show_time.c  trial_ctime.c  trial_get_time.c  trial_time.c
src/ch12/: list_12_01_procfs_pidmax.c
src/ch24/: list_24_01_fork_file_sharing.c  list_24_01_t_fork.c
src/ch29/: trial_create_thread.c
src/ch59/: i6d_ucase.h  i6d_ucase_cl.c  i6d_ucase_sv.c  trial_sockets.c
